fixed little spacing error

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 	height: 350px;
 	position: absolute;
 	top: 850px;
+	left: 0%;
   font-size: 18px;
   font-family: mono;
 	background: black;
